--- a/css/styles.css
+++ b/css/styles.css
@@ -724,6 +724,7 @@ img {
 .modal-close-btn:hover,
 .modal-close-btn:focus {
     background-color: #404BBF;
+    border: none;
 }
 
 .review-form-description {
@@ -798,6 +799,8 @@ img {
     border: 1px solid rgba(46, 47, 66, 0.40);
     resize: none;
     padding: 8px 16px;
+    background-color: transparent;
+    outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: rgba(46, 47, 66, 0.40);
     
