--- a/css/styles.css
+++ b/css/styles.css
@@ -669,11 +669,11 @@ img {
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .backdrop.is-open {
+.backdrop.is-open {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
-}  */
+} 
 /* ======== /BACKDROP STYLES ========= */
 
 /* ======== MODAL WINDOW STYLES ========= */
